<resources>
    <string name="app_name">Budget Control</string>

    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="name">Name</string>
    <string name="money">Money</string>
    <string name="submit">Submit</string>
    <string name="color">Color</string>
    <string name="color_picker">Color picker</string>
    <string name="add">Add</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>

    <string name="budgets_list_is_empty_stub_title">List is empty</string>
    <string name="budgets_list_is_empty_stub_message">Oops! The list of budgets is empty</string>

    <string name="error_stub_title">Something went wrong</string>

    <string name="create_budget">Create budget</string>
    <string name="create_category">Create category</string>
    <string name="delete_budget">Delete budget</string>
    <string name="rename_budget">Rename budget</string>
    <string name="delete_category">Delete category</string>
    <string name="list_budgets">List budgets</string>

    <string name="total">Total: %s</string>
    <string name="remainder">Remainder: %s</string>

    <string name="invalidate_fields">Fields is invalidate.</string>
    <string name="unknown_error">Unknown error.</string>
    <string name="ask_you_are_sure">You are sure?</string>

    <!-- Errors auth -->
    <string name="error_auth">Authentication failed</string>
    <string name="error_auth_email">E-mail is invalidate</string>
    <string name="error_auth_password">Password is invalidate</string>
    <string name="error_auth_confirm_password">Password mismatch</string>
</resources>