<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/vToolBar"
        style="@style/Widget.MaterialComponents.AppBarLayout.Surface"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/create_budget" />

    <EditText
        android:id="@+id/vNameBudget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_margin="16dp"
        android:maxLength="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vToolBar" />

    <EditText
        android:id="@+id/vMoneyBudget"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/money"
        android:inputType="number"
        android:maxLength="30"
        app:layout_constraintEnd_toEndOf="@id/vNameBudget"
        app:layout_constraintStart_toStartOf="@id/vNameBudget"
        app:layout_constraintTop_toBottomOf="@id/vNameBudget" />

    <Button
        android:id="@+id/vSubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="@+id/vMoneyBudget"
        app:layout_constraintTop_toBottomOf="@+id/vMoneyBudget" />

    <Spinner
        android:id="@+id/vSpinnerCurrency"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/vSubmitButton"
        app:layout_constraintEnd_toStartOf="@+id/vSubmitButton"
        app:layout_constraintTop_toTopOf="@+id/vSubmitButton" />
</androidx.constraintlayout.widget.ConstraintLayout>