<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/vToolBar"
        style="@style/Widget.MaterialComponents.AppBarLayout.Surface"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/list_budgets" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/vSwipeRefresher"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vToolBar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/vRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/view_budget" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/vFloatingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/add" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/vLoadingProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/vStub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/vStubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/budgets_list_is_empty_stub_title"
            android:textSize="24sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/vStubMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/budgets_list_is_empty_stub_message"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/vStubTitle"
            app:layout_constraintStart_toStartOf="@+id/vStubTitle"
            app:layout_constraintTop_toBottomOf="@+id/vStubTitle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/vStubButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_budget"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/vStubMessage"
            app:layout_constraintLeft_toLeftOf="@id/vStubMessage"
            app:layout_constraintRight_toRightOf="@id/vStubMessage"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>