<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp">

    <EditText
        android:id="@+id/vNameCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/vMoneyCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="number"
        android:hint="@string/money"
        app:layout_constraintEnd_toEndOf="@id/vNameCategory"
        app:layout_constraintStart_toStartOf="@id/vNameCategory"
        app:layout_constraintTop_toBottomOf="@id/vNameCategory" />

    <Button
        android:id="@+id/vSubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="@+id/vMoneyCategory"
        app:layout_constraintTop_toBottomOf="@+id/vMoneyCategory" />

    <View
        android:id="@+id/vColorPick"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_bg"
        app:layout_constraintBottom_toBottomOf="@+id/vSubmitButton"
        app:layout_constraintEnd_toStartOf="@+id/vSubmitButton"
        app:layout_constraintTop_toTopOf="@+id/vSubmitButton"
        tools:backgroundTint="@color/black"/>

    <Spinner
        android:id="@+id/vSpinnerCurrency"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/vColorPick"
        app:layout_constraintEnd_toStartOf="@+id/vColorPick"
        app:layout_constraintTop_toTopOf="@+id/vColorPick" />


</androidx.constraintlayout.widget.ConstraintLayout>